src/test/deca/context/invalid/created/declVar/INT_no_identifier.deca
// Description:
//  Assign un int sans identier
// 
// Resultats:
//    Ligne 8 : identifier not defined

{
    int;
}